examples/avm-res-containerservice-managedcluster/0.4.0-pre1/submodules/monitoring/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-containerservice-managedcluster/monitoring

Module to onboard monitoring for the AKS cluster.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.6.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_resource.dce_msprom](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dce_msprom_aks](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msci](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msci_aks](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msprom](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msprom_aks](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.prg_k8s](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.prg_node](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.prg_ux](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_aks_cluster_id"></a> [aks\_cluster\_id](#input\_aks\_cluster\_id)

Description: The resource ID of the AKS cluster

Type: `string`

### <a name="input_location"></a> [location](#input\_location)

Description: The Azure region where resources will be created

Type: `string`

### <a name="input_log_analytics_workspace_id"></a> [log\_analytics\_workspace\_id](#input\_log\_analytics\_workspace\_id)

Description: The resource ID of the Log Analytics workspace

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the parent resource group

Type: `string`

### <a name="input_prometheus_workspace_id"></a> [prometheus\_workspace\_id](#input\_prometheus\_workspace\_id)

Description: The resource ID of the Azure Monitor workspace for managed Prometheus

Type: `string`

## Optional Inputs

No optional inputs.

## Outputs

The following outputs are exported:

### <a name="output_container_insights_dcr_id"></a> [container\_insights\_dcr\_id](#output\_container\_insights\_dcr\_id)

Description: The resource ID of the Container Insights data collection rule

### <a name="output_data_collection_endpoint_id"></a> [data\_collection\_endpoint\_id](#output\_data\_collection\_endpoint\_id)

Description: The resource ID of the data collection endpoint

### <a name="output_data_collection_rule_id"></a> [data\_collection\_rule\_id](#output\_data\_collection\_rule\_id)

Description: The resource ID of the data collection rule

### <a name="output_prometheus_rule_group_node_id"></a> [prometheus\_rule\_group\_node\_id](#output\_prometheus\_rule\_group\_node\_id)

Description: The resource ID of the node Prometheus rule group

### <a name="output_prometheus_rule_group_ux_id"></a> [prometheus\_rule\_group\_ux\_id](#output\_prometheus\_rule\_group\_ux\_id)

Description: The resource ID of the UX Prometheus rule group

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the primary data collection rule created by this module

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
