examples/avm-res-containerservice-managedcluster/0.8.8/submodules/monitoring/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-containerservice-managedcluster/monitoring

Module to onboard monitoring for the AKS cluster.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.6.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.12)

## Resources

The following resources are used by this module:

- [azapi_resource.dce_msprom](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dce_msprom_aks](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msci](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msci_aks](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msprom](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.dcr_msprom_aks](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.prg_k8s](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.prg_node](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.prg_ux](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_aks_cluster_id"></a> [aks\_cluster\_id](#input\_aks\_cluster\_id)

Description: The resource ID of the AKS cluster

Type: `string`

### <a name="input_location"></a> [location](#input\_location)

Description: The Azure region where resources will be created

Type: `string`

### <a name="input_log_analytics_workspace_id"></a> [log\_analytics\_workspace\_id](#input\_log\_analytics\_workspace\_id)

Description: The resource ID of the Log Analytics workspace

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the parent resource group

Type: `string`

### <a name="input_prometheus_workspace_id"></a> [prometheus\_workspace\_id](#input\_prometheus\_workspace\_id)

Description: The resource ID of the Azure Monitor workspace for managed Prometheus

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_ignore_body_changes"></a> [ignore\_body\_changes](#input\_ignore\_body\_changes)

Description: Body-relative paths to ignore for each AzAPI resource, in dot notation. Changes take  
effect only after apply, and ignored configuration is not sent to Azure until the  
path is removed.

- `alertsmanagement_prometheus_rule_groups` - Paths ignored on the Prometheus rule groups.
- `insights_data_collection_endpoints` - Paths ignored on the data collection endpoint.
- `insights_data_collection_rule_associations` - Paths ignored on the data collection rule associations.
- `insights_data_collection_rules` - Paths ignored on the data collection rules.

Type:

```hcl
object({
    alertsmanagement_prometheus_rule_groups    = optional(list(string), [])
    insights_data_collection_endpoints         = optional(list(string), [])
    insights_data_collection_rule_associations = optional(list(string), [])
    insights_data_collection_rules             = optional(list(string), [])
  })
```

Default: `{}`

### <a name="input_resource_types"></a> [resource\_types](#input\_resource\_types)

Description: AzAPI resource types and API versions used by this module.

- `alertsmanagement_prometheus_rule_groups` - Resource type and API version for the Prometheus rule groups.
- `insights_data_collection_endpoints` - Resource type and API version for the data collection endpoint.
- `insights_data_collection_rule_associations` - Resource type and API version for the data collection rule associations.
- `insights_data_collection_rules` - Resource type and API version for the data collection rules.

Type:

```hcl
object({
    alertsmanagement_prometheus_rule_groups    = optional(string, "Microsoft.AlertsManagement/prometheusRuleGroups@2023-03-01")
    insights_data_collection_endpoints         = optional(string, "Microsoft.Insights/dataCollectionEndpoints@2023-03-11")
    insights_data_collection_rule_associations = optional(string, "Microsoft.Insights/dataCollectionRuleAssociations@2023-03-11")
    insights_data_collection_rules             = optional(string, "Microsoft.Insights/dataCollectionRules@2023-03-11")
  })
```

Default: `{}`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: Retry configuration applied to the AzAPI resources in this module.

- `error_message_regex` - Regular expressions matching error messages that should be retried.
- `interval_seconds` - Initial delay between retries, in seconds.
- `max_interval_seconds` - Maximum delay between retries, in seconds.

Type:

```hcl
object({
    error_message_regex  = optional(list(string))
    interval_seconds     = optional(number)
    max_interval_seconds = optional(number)
  })
```

Default: `null`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: (Optional) Tags of the resource.

Type: `map(string)`

Default: `null`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: Timeouts applied to the AzAPI resources in this module.

- `create` - Timeout for create operations.
- `read` - Timeout for read operations.
- `update` - Timeout for update operations.
- `delete` - Timeout for delete operations.

Type:

```hcl
object({
    create = optional(string)
    read   = optional(string)
    update = optional(string)
    delete = optional(string)
  })
```

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_container_insights_dcr_id"></a> [container\_insights\_dcr\_id](#output\_container\_insights\_dcr\_id)

Description: The resource ID of the Container Insights data collection rule

### <a name="output_data_collection_endpoint_id"></a> [data\_collection\_endpoint\_id](#output\_data\_collection\_endpoint\_id)

Description: The resource ID of the data collection endpoint

### <a name="output_data_collection_endpoint_name"></a> [data\_collection\_endpoint\_name](#output\_data\_collection\_endpoint\_name)

Description: The name of the data collection endpoint.

### <a name="output_data_collection_rule_id"></a> [data\_collection\_rule\_id](#output\_data\_collection\_rule\_id)

Description: The resource ID of the data collection rule

### <a name="output_data_collection_rule_name"></a> [data\_collection\_rule\_name](#output\_data\_collection\_rule\_name)

Description: The name of the data collection rule.

### <a name="output_prometheus_rule_group_node_id"></a> [prometheus\_rule\_group\_node\_id](#output\_prometheus\_rule\_group\_node\_id)

Description: The resource ID of the node Prometheus rule group

### <a name="output_prometheus_rule_group_ux_id"></a> [prometheus\_rule\_group\_ux\_id](#output\_prometheus\_rule\_group\_ux\_id)

Description: The resource ID of the UX Prometheus rule group

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the primary data collection rule created by this module

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
